--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "little-sandman-docs3",
-  "homepage": "https://bj-lai.github.io",
+  "homepage": "https://Bj-LAI.github.io",
   "version": "0.0.0",
   "private": true,
   "scripts": {
